<resources>
    <string name="app_name">Outlook Mags</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. </string>
    <string name="ipsum_big">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese. Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese. Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese. Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese </string>
    <string name="go_up">GO UP</string>
    <string name="copyright">Copyright 2015 The Outlook Group.</string>

    <string name="alert_dialog_title">Please Select</string>
    <string name="positive_button_text">Select</string>
    <string name="negative_button_text">Cancel</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="buy">BUY</string>
    <string name="download">DOWNLOAD</string>
    <string name="notifications">Notifications</string>
    <string name="my_downloads">My Downloads</string>
    <string name="restore_subcription">Restore Subcription</string>
    <string name="about">About</string>
    <string name="how_to_use">How to Use</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="facebook_signin">Sign in with Facebook</string>
    <string name="google_signin">Sign in with Google</string>
    <string name="sign_up">SIGN UP</string>
    <string name="signin_to_conitinue">SIGN IN TO CONTINUE</string>
    <string name="facebook_app_id">1067468666675015</string>
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <string name="no_internet">Please check your internet connectivity.</string>
    <string name="subscriber_content_msg">To enjoy all the articles in this issue, please do subscribe or buy single issue.</string>
    <string name="logout_msg">Logging out will delete all stored content (including earlier saved issues).\n\nDo you wish to continue?</string>
    <string name="empty_email_password">Please enter a valid email and password.</string>
    <string name="email_to_get_password">Please enter the registered email to recover the password.</string>
<string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="gcm_default_sender_id">105915870368</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="username_hint">Enter UserName </string>

 <string name="subscribe_to_outlook">Subscribe to Outlook</string>
    <string name="subscribe_to_get_full_access">Subscribe to get full access to Outlook magazines</string>
    <string name="yes">YES</string>
    <string name="cancel">CANCEL</string></resources>
