<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:background="?attr/colorPrimary"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_user" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignTop="@+id/imageView"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/imageView5"
            android:layout_toRightOf="@+id/imageView"
            android:layout_toStartOf="@+id/imageView5"
            android:gravity="center|left"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="User Name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="sample@gmail.com"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/cool_grey"
                android:textSize="@dimen/text_small" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:src="@drawable/icon_close" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="?attr/selectableItemBackground"
                android:descendantFocusability="blocksDescendants"
                android:paddingLeft="35dp"
                android:paddingRight="35dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/my_downloads"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="@dimen/text_big" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="3dp"
                    android:src="@drawable/icon_right_arrow" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cool_grey" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:descendantFocusability="blocksDescendants"
                android:foreground="?attr/selectableItemBackground"
                android:paddingLeft="35dp"
                android:paddingRight="35dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/restore_subcription"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="@dimen/text_big" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="3dp"
                    android:src="@drawable/icon_download" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cool_grey" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:foreground="?android:selectableItemBackground"
                android:paddingLeft="35dp"
                android:paddingRight="35dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/notifications"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/text_big" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cool_grey" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:foreground="?android:selectableItemBackground"
                android:paddingLeft="35dp"
                android:paddingRight="35dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/about"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="@dimen/text_big" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="3dp"
                    android:src="@drawable/icon_right_arrow" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cool_grey" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:foreground="?android:selectableItemBackground"
                android:paddingLeft="35dp"
                android:paddingRight="35dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/terms_conditions"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="@dimen/text_big" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="3dp"
                    android:src="@drawable/icon_right_arrow" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cool_grey" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:foreground="?android:selectableItemBackground"
                android:paddingLeft="35dp"
                android:paddingRight="35dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/privacy_policy"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="@dimen/text_big" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="3dp"
                    android:src="@drawable/icon_right_arrow" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cool_grey" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:foreground="?android:selectableItemBackground"
                android:paddingLeft="35dp"
                android:paddingRight="35dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/logout"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="@dimen/text_big" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>